feat: amplifies grpc, persistence and api rest functionality
