# code/infrastructure/src/main/resources/openapi.yml
@@ -92,6 +92,14 @@ paths:
       summary: Create a new office
       tags:
         - Office
+      parameters:
+        - in: query
+          name: buildingId
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: ID of the building to create the office
       requestBody:
         content:
           application/json:
